apps/frontend/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.jimagcars.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
